[Browse] Upload button not always works

--- a/src/igz_controls/components/action-item/action-item.tpl.html
+++ b/src/igz_controls/components/action-item/action-item.tpl.html
@@ -11,6 +11,7 @@
      data-tooltip-append-to-body="true">
 
     <div data-ng-if="$ctrl.action.id === 'upload'"
+         class="upload-action"
          data-ngf-select
          data-ngf-multiple="true"
          data-ngf-change="$ctrl.onFilesDropped($files)">
