--- a/src/igz_controls/components/action-panel/action-panel.less
+++ b/src/igz_controls/components/action-panel/action-panel.less
@@ -108,6 +108,14 @@
                 margin: 0;
             }
 
+            .upload-action {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
             .action-icon {
                 color: @action-icon-color;
             }
