Add new style mode

--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -419,3 +419,16 @@
         }
     }
 }
+
+.no-selected-option-style {
+    .default-dropdown {
+        .default-dropdown-field {
+            border: none;
+
+            &:active, &:focus, &:hover {
+                background-color: unset;
+                box-shadow: none;
+            }
+        }
+    }
+}
