[Browse] Add attribute-type icons

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -655,6 +655,26 @@
     .generateIconClass(a18);
 }
 
+.igz-icon-string {
+    .generateIconClass(992);
+}
+
+.igz-icon-number {
+    .generateIconClass(991);
+}
+
+.igz-icon-blob {
+    .generateIconClass(98e);
+}
+
+.igz-icon-timestamp {
+    .generateIconClass(98d);
+}
+
+.igz-icon-boolean {
+    .generateIconClass(98f);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
