--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -277,11 +277,12 @@
     }
 
     .dropdown-icon {
-        display: inline-block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin-right: 7px;
         font-size: 15px;
         width: 22px;
-        text-align: center;
 
         &:not(.custom-color) {
             color: @dropdown-icon-not-custom-color;
