Cut clickable area

--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.less
@@ -59,7 +59,7 @@
     }
 
     .create-volume-button {
-        display: flex;
+        display: inline-flex;
         align-items: center;
         padding-left: 16px;
         font-size: 14px;
