Add "Disable" state to key-value input

--- a/src/nuclio/common/components/key-value-input/key-value-input.less
+++ b/src/nuclio/common/components/key-value-input/key-value-input.less
@@ -131,11 +131,11 @@
                     }
                 }
 
-                &:not(.use-type, .only-value-input) {
-                    width: 58%;
+                &.only-key-value-input {
+                    width: 62%;
                 }
 
-                &.only-key-value-input {
+                &.only-key-value-input.use-type {
                     width: 58%;
                 }
 
