Add new icon "Public"

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -675,6 +675,10 @@
     .generateIconClass(98f);
 }
 
+.igz-icon-public {
+    .generateIconClass(993);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
