Impl [General] More-info: use default cursor when opens on hover
Use pointer cursor only when tooltip opens on click.

--- a/src/igz_controls/components/more-info/more-info.less
+++ b/src/igz_controls/components/more-info/more-info.less
@@ -8,11 +8,7 @@
     padding-left: 15px;
 
     .question-mark {
-        cursor: pointer;
-
-        &.disabled {
-            cursor: default;
-        }
+        cursor: default;
 
         &:before {
             color: @icon-help-round-before-color;
@@ -27,6 +23,10 @@
             + .row-description {
                 color: @icon-help-description-hover-color;
             }
+        }
+
+        &.click-trigger {
+            cursor: pointer;
         }
 
         &:not(.click-trigger) {
