--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -424,7 +424,7 @@
                         </ncl-key-value-input>
                     </div>
                 </div>
-                <div class="create-ingress-button"
+                <div class="ncl-create-button create-ingress-button"
                      data-ng-click="$ctrl.addNewIngress($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_INGRESS' | i18next }}
@@ -460,7 +460,7 @@
                     </div>
                 </div>
 
-                <div class="create-annotation-button"
+                <div class="ncl-create-button create-annotation-button"
                      data-ng-click="$ctrl.addNewAnnotation($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_ANNOTATION' | i18next }}
@@ -516,7 +516,7 @@
                     </div>
                 </div>
 
-                <div class="create-event-header"
+                <div class="ncl-create-button create-event-header"
                      data-ng-click="$ctrl.addNewEventHeader($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_EVENT_HEADER' | i18next }}
@@ -550,7 +550,7 @@
                     </div>
                 </div>
 
-                <div class="create-subscription-button"
+                <div class="ncl-create-button create-subscription-button"
                      data-ng-click="$ctrl.addNewSubscription($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_SUBSCRIPTION' | i18next }}
@@ -579,7 +579,7 @@
                     </div>
                 </div>
 
-                <div class="create-topic-button"
+                <div class="ncl-create-button create-topic-button"
                      data-ng-click="$ctrl.addNewTopic($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_TOPIC' | i18next }}
@@ -608,7 +608,7 @@
                     </div>
                 </div>
 
-                <div class="create-broker-button"
+                <div class="ncl-create-button create-broker-button"
                      data-ng-click="$ctrl.addNewBroker($event)">
                     <span class="igz-icon-add-round"></span>
                     {{ 'functions:CREATE_NEW_BROKER' | i18next }}
