[Nuclio] Function status icon hides for small browser resolution

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.less
@@ -58,6 +58,10 @@
             font-weight: bold;
         }
 
+        .function-status {
+            min-width: 100px;
+        }
+
         .actions-menu {
             visibility: hidden;
         }
