--- a/src/nuclio/projects/project/functions/function.less
+++ b/src/nuclio/projects/project/functions/function.less
@@ -10,4 +10,8 @@ ncl-functions {
     .invisible {
         visibility: hidden;
     }
+
+    .function-status {
+        min-width: 100px;
+    }
 }
