[General] Text box: Add validation rules pop-up

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -679,6 +679,18 @@
     .generateIconClass(993);
 }
 
+.igz-icon-verify-ok {
+    .generateIconClass(994);
+}
+
+.igz-icon-verify-error {
+    .generateIconClass(995);
+}
+
+.igz-icon-verify-info {
+    .generateIconClass(996);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
