--- a/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
+++ b/src/igz_controls/components/validating-input-field/validating-input-field.tpl.html
@@ -1,6 +1,12 @@
 <div class="validating-input-field"
      data-ng-class="{'focused': $ctrl.inputFocused, 'with-counter': $ctrl.isCounterVisible()}">
     <div data-ng-if="$ctrl.fieldType === 'input'">
+        <div class="validation-icon"
+             data-ng-click="$ctrl.openValidationPopUp()"
+             data-ng-class="{'igz-icon-verify-info': $ctrl.inputIsTouched && $ctrl.data === '',
+                             'igz-icon-verify-error': $ctrl.isValueInvalid() && $ctrl.data !== '',
+                             'igz-icon-verify-ok': !$ctrl.isValueInvalid() && $ctrl.data !== ''}">
+        </div>
         <div class="input-counter"
              data-ng-class="{'invalid': $ctrl.getRemainingSymbolsCounter() < 0}"
              data-ng-if="$ctrl.isCounterVisible()">{{$ctrl.getRemainingSymbolsCounter()}}
@@ -34,6 +40,18 @@
               data-ng-show="$ctrl.data && $ctrl.isClearIcon"
               data-ng-click="$ctrl.clearInputField()">
         </span>
+        <div data-ng-if="$ctrl.isValidationPopUpShown"
+             class="validation-pop-up">
+            <div class="validation-rule"
+                 data-ng-repeat="rule in $ctrl.validationRules">
+                <span class="validation-rule-icon"
+                      data-ng-class="rule.isValid ? 'igz-icon-verify-ok' : 'ncl-icon-close'"></span>
+                <span class="validation-rule-label"
+                      data-ng-class="rule.isValid ? 'validation-rule-valid' : 'validation-rule-invalid'">
+                    {{rule.label}}
+                </span>
+            </div>
+        </div>
     </div>
 
     <div data-ng-if="$ctrl.fieldType === 'textarea'">
