[Nuclio] Dropdown visual issue

--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -20,6 +20,12 @@
             margin-right: 14px;
             width: 154px;
 
+            .default-dropdown {
+                .default-dropdown-container {
+                    position: relative;
+                }
+            }
+
             .error {
                 color: @darkish-pink;
                 font-size: 12px;
