UI field validation

--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -129,5 +129,13 @@
         border-radius: 2px;
         word-wrap: break-word;
         max-width: 280px;
+
+        .tooltip-block {
+            margin-bottom: 10px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
     }
 }
