[Nuclio] Projects/Functions screen refactoring

--- a/src/igz_controls/less/igz-grid.less
+++ b/src/igz_controls/less/igz-grid.less
@@ -49,6 +49,10 @@
     width: 2.5%;
 }
 
+&.igz-col-3 {
+    width: 3%;
+}
+
 &.igz-col-5 {
     width: 5%;
 }
@@ -135,6 +139,10 @@
 
 &.igz-col-25 {
     width: 25%;
+}
+
+&.igz-col-27-5 {
+    width: 27.5%;
 }
 
 &.igz-col-28 {
