[General] Monaco editor should keep editing after close confirm dialog

--- a/src/igz_controls/less/buttons.less
+++ b/src/igz_controls/less/buttons.less
@@ -299,6 +299,12 @@
     }
 }
 
+.igz-grouped-buttons-reverse {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+}
+
 .igz-create-button,
 .ncl-create-button {
     .create-button-color-set();
