--- a/src/nuclio/projects/projects-functions-view/projects-functions-view.less
+++ b/src/nuclio/projects/projects-functions-view/projects-functions-view.less
@@ -1,33 +1,48 @@
 ncl-projects-functions-view {
     igz-info-page-actions-bar {
-        igz-default-dropdown {
-            display: inline-block;
-            width: 150px;
-        }
+        .igz-info-page-actions-bar {
+            min-width: 910px;
 
-        .project-import-input {
-            display: none;
-        }
+            igz-default-dropdown {
+                display: inline-block;
+                width: 150px;
+            }
 
-        .view-by-dropdown {
-            display: inline-block;
-            margin-right: 15px;
+            .project-import-input {
+                display: none;
+            }
         }
     }
 
     .igz-info-page-content-wrapper {
         .igz-info-page-content {
+            min-width: 1170px;
+
             .table-actions {
+                display: flex;
+                align-items: center;
                 margin: 5px 10px;
 
-                .ncl-icon-expand-all,
-                .ncl-icon-collapse-all {
-                    .duskThree(0.64);
-                    display: inline-flex;
-                    margin: 10px;
-                    color: @color;
-                    font-size: 16px;
+                .view-by-dropdown {
+                    display: inline-block;
+                    margin-right: 15px;
+
+                    igz-default-dropdown {
+                        display: inline-block;
+                    }
                 }
+
+                .igz-actions-panel {
+                    .ncl-icon-expand-all,
+                    .ncl-icon-collapse-all {
+                        .duskThree(0.64);
+                        display: inline-flex;
+                        margin: 10px;
+                        color: @color;
+                        font-size: 16px;
+                    }
+                }
+
             }
 
             .function-status {
