--- a/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.tpl.html
@@ -59,7 +59,7 @@
                 data-uib-tooltip="{{$ctrl.getTooltip(item)}}"
                 data-tooltip-placement="{{item.tooltipPlacement || 'left'}}"
                 data-tooltip-append-to-body="true">
-                <div class="list-item-block">
+                <div class="list-item-block text-ellipsis">
                     <div data-ng-if="$ctrl.getIcon(item).name"
                          data-ng-class="{'custom-color': $ctrl.dropdownType === 'priority'}"
                          class="dropdown-icon {{$ctrl.getIcon(item).name}}">
